# saleor-app-export

./: .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  db.py  docker-compose.yml  main.py  pyproject.toml  settings.py  setup.cfg
.github/workflows/: deploy-staging.yml
alembic/: env.py
alembic/versions/: 0b8adffa5132_init.py  35c27e44887c_init.py  7190f67daae2_create_file_and_event_tables.py  727196644035_init.py  75d442069718_init.py  dd5629eac406_add_recipients.py  fa486392caa7_init_export_app_models.py
app/: celery.py  main.py
app/common/: models.py  notifications.py  tasks.py
app/common/utils/: export.py
app/core/: models.py
app/core/common/: events.py  notifications.py  tasks.py
app/core/export/: builder.py  executor.py  fetch.py  fields.py  files.py  parse.py  persist.py  tasks.py
app/core/reports/: models.py
app/graphql/: mutations.py  pagination.py  query.py  schema.graphql
app/graphql/reports/: resolvers.py  responses.py  types.py
app/products/: __init__.py  api.py  tasks.py
app/products/utils/: data.py  export.py  headers.py
apps/common/: events.py  models.py  notifications.py  tasks.py
apps/common/utils/: export.py
apps/products/: api.py  tasks.py
apps/products/utils/: data.py  export.py  headers.py
docker/: prod.Dockerfile
tests/: fixtures.py
tests/data/: demo-all-attributes.graphql  demo-all-orders.graphql  reports-union-type.graphql
ui/: .eslintrc  .prettierrc  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.tsx  Router.tsx  globalTypes.ts  index.css  index.tsx  react-app-env.d.ts  zustand.ts
ui/src/api/: apiClient.ts  attributesValues.ts  channels.ts  gridAttributes.ts  index.ts  initialProductFilterAttributes.ts  productCount.ts  searchAttributes.ts  searchCategories.ts  searchCollections.ts  searchProductTypes.ts
ui/src/common/: index.ts
ui/src/components/: index.ts
ui/src/context/: index.ts
ui/src/hooks/: ExportOrderColumnsStore.ts  index.ts  useCurrentUserStore.ts  useExportCommonStore.ts  useExportOrder.ts  useExportProduct.ts  useExportProductColumnsStore.ts  useOrderExport.ts  (+1 more)
(+516 files in other folders)
